--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "anayarojo/shoppingcart": "^4.2",
         "barryvdh/laravel-dompdf": "^3.1",
         "haruncpi/laravel-id-generator": "^1.1",
         "intervention/image": "^3.8",
